--- a/src/Screens/Payments/Payments.scss
+++ b/src/Screens/Payments/Payments.scss
@@ -3,8 +3,8 @@
   flex-direction: column;
   background-color: #fafafa;
   gap: 2rem;
-  padding: 2rem;
-  height: 100vh;
+  // padding: 2rem;
+  height: 90vh;
   overflow-y: auto;
 }
 
