--- a/src/components/Layout/Layout.scss
+++ b/src/components/Layout/Layout.scss
@@ -6,4 +6,5 @@
   flex: 1;
   width: 85%; /* Adjust as needed */
   // overflow-y: auto; /* Add scrollbar if content overflows vertically */
+  height: 100vh;
 }
